<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color_dark"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginLeft="@dimen/general_margin"
            android:layout_marginRight="@dimen/general_margin"
            android:background="@android:color/white" />

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_margin="@dimen/general_margin"
            android:contentDescription="@string/devRant"
            android:src="@drawable/devrant" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginLeft="@dimen/general_margin"
            android:layout_marginRight="@dimen/general_margin"
            android:background="@android:color/white"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_margin="@dimen/general_margin"
            android:contentDescription="@string/stories"
            android:src="@drawable/file_document_box" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginLeft="@dimen/general_margin"
            android:layout_marginRight="@dimen/general_margin"
            android:background="@android:color/white"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_margin="@dimen/general_margin"
            android:contentDescription="@string/collabs"
            android:src="@drawable/account_multiple" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginLeft="@dimen/general_margin"
            android:layout_marginRight="@dimen/general_margin"
            android:background="@android:color/white"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_margin="@dimen/general_margin"
            android:contentDescription="@string/notifs"
            android:src="@drawable/bell" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginLeft="@dimen/general_margin"
            android:layout_marginRight="@dimen/general_margin"
            android:background="@android:color/white"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_margin="@dimen/general_margin"
            android:contentDescription="@string/more"
            android:src="@drawable/menu" />

    </LinearLayout>

</LinearLayout>



