<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:scaleType="center"
                android:src="@drawable/plus"
                app:backgroundTint="@color/icon_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:text="@string/likes_image"
                android:textSize="@dimen/text_small" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:scaleType="center"
                android:src="@drawable/minus"
                app:backgroundTint="@color/icon_background" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:text="@string/lorem_short"
                android:textSize="@dimen/text" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:scaleType="fitXY"
                android:src="@drawable/dummy"
                app:riv_corner_radius="5dip" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/general_margin"
                    android:layout_marginTop="@dimen/general_margin"
                    android:alpha="0.7"
                    android:text="@string/tag"
                    android:textSize="@dimen/text_small" />

                <ImageView
                    android:layout_width="@dimen/comment_icon_width"
                    android:layout_height="@dimen/comment_icon_height"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/general_margin"
                    android:layout_marginTop="@dimen/general_margin"
                    android:layout_toStartOf="@id/comment"
                    android:contentDescription="@string/comment"
                    android:src="@drawable/message_reply" />

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/general_margin"
                    android:layout_marginTop="@dimen/general_margin"
                    android:alpha="0.7"
                    android:text="@string/comment_no_image"
                    android:textSize="@dimen/text_small" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/background_color_light" />

</LinearLayout>